fix on ios 26

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,6 +70,9 @@
 }
 
 html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   overscroll-behavior: none;
   scroll-behavior: smooth;
   font-family: SF Pro Display, sans-serif;
@@ -80,6 +83,11 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  background: #2a2626;
 }
 
 h1, h2, h3, h4, h5, h6 {
